Fix margin width on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .App {
   text-align: center;
-  padding: 0.5rem 11rem;
   font-weight: 300;
+  margin: 1rem 2.5rem;
 }
 
 .container {
